package edu.advising.roster;

public enum RosterSortOrder {
    ALPHABETICAL,
    BY_STUDENT_ID,
    BY_CREDITS_EARNED,
    BY_ENROLLMENT_DATE
}
